<resources>
    <string name="app_name">SendInfo</string>
    <string name="ButtonText">Create User</string>
    <string name="NameText">Name</string>
    <string name="AgeText">Age</string>
    <string name="AddressText">Address</string>
    <string name="EmailText">Email</string>
    <string name="NameHint">Enter your name</string>
    <string name="AgeHint">Enter your age</string>
    <string name="AddressHint">Enter your address</string>
    <string name="EmailHint">Enter your Email</string>
    <string name="ButtonSave">Save</string>
    <string name="ButtonSend">Send</string>
    <string name="LightTheme">Light Theme</string>
    <string name="DarkTheme">Dark Theme</string>
    <string name="AutoTheme">Auto Theme</string>
</resources>