<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/EditActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="200dp"
        android:text="@string/ButtonText"
        app:layout_constraintBottom_toTopOf="@+id/themeGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <RadioGroup
        android:id="@+id/themeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="129dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/LightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LightTheme" />

        <RadioButton
            android:id="@+id/DarkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DarkTheme" />

        <RadioButton
            android:id="@+id/AutoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AutoTheme" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>